@@ -1,3 +1,8 @@
+2007-11-06  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh:(CygbuildCmdInstallCheckSetupHint):
+	Improve ldesc: double quote check.
+
 2007-11-04  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh: (CygbuildCmdInstallCheckSetupHint):
